--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,12 +61,14 @@
      <Compile Include="Assets\Scripts\GamerQuitter.cs" />
      <Compile Include="Assets\Scripts\HealthBar.cs" />
      <Compile Include="Assets\Scripts\HealthSystem.cs" />
+     <Compile Include="Assets\Scripts\MonsterAI.cs" />
      <Compile Include="Assets\Scripts\PauseMenuToggle.cs" />
      <Compile Include="Assets\Scripts\QuitToStartScreen.cs" />
      <Compile Include="Assets\Scripts\ResumeGame.cs" />
      <Compile Include="Assets\Scripts\SceneStart.cs" />
      <Compile Include="Assets\Scripts\ThirdPersonCameraController.cs" />
      <Compile Include="Assets\Scripts\ThirdPersonCharacterController.cs" />
+     <Compile Include="Assets\Scripts\VelocityReporter.cs" />
      <None Include="Assets\Fantasy Forest Environment Free Sample\StandardNoCulling.shader" />
      <None Include="Assets\AllSkyFree\AllSkyFree_Readme.txt" />
      <None Include="Assets\Fruit Pack\Shaders\ToonLitTransparent.shader" />
