player cam and controller

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -108,6 +108,8 @@
     <Compile Include="Assets\Throwing\scripts\RockController.cs" />
     <Compile Include="Assets\Throwing\scripts\RockMove.cs" />
     <Compile Include="Assets\Throwing\scripts\RockPickup.cs" />
+    <Compile Include="Assets\control\CameraRig.cs" />
+    <Compile Include="Assets\control\CameraRigEditor.cs" />
     <Compile Include="Assets\control\PlayerController.cs" />
     <None Include="Assets\Fantasy Forest Environment Free Sample\StandardNoCulling.shader" />
     <None Include="Assets\Baker House\Readme.txt" />
